[PE] Fix under-invalidation when <svg> resizes from near-zero size

SVGRootPainter has the following code:
  if (PixelSnappedSize(paint_offset).IsEmpty())
    return;
so when the size changes bigger from near-zero, we need to check
the condition during paint. This requires us to repaint the containing
layer even if the <svg> object itself paints nothing.

Remove LayoutSVGRoot::PaintedOutputOfObjectHasNoEffectRegardlessOfSize
(and use the inherited LayoutReplaced version which always returns false)
so that we'll always invalidate paint of <svg> on size change even if
the object itself paints nothing, as the code above can be treated as a
paint effect.

Bug: 899227
Change-Id: Icc83c352555c0ae183cdaf0bfb30c1ad99d6f428
Reviewed-on: https://chromium-review.googlesource.com/c/1317011
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#605342}
Former-commit-id: b5ccedd6977c3be348003544c2af6f6761d777da